# karukan

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PKGBUILD  README.md
.cargo/: config.toml
.github/workflows/: fcitx5-integration-test.yml  integration-test.yml  karukan-macos-ci.yml  karukan-tsf-ci.yml  release.yml
karukan-cli/: README.md
karukan-cli/docs/: NOTICE
karukan-engine/src/: kana.rs
karukan-engine/src/kanji/: backend.rs
karukan-engine/tests/: kanji_conversion_tests.rs  romaji_tests.rs
karukan-im/: Cargo.toml  README.md  install-local.sh
karukan-im/config/: default.toml
karukan-im/fcitx5-addon/: CMakeLists.txt
karukan-im/include/: karukan_mac.h
karukan-im/src/: lib.rs
karukan-im/src/config/: settings.rs
karukan-im/src/core/: keycode.rs  keymap_mac.rs  mod.rs
karukan-im/src/core/engine/: display.rs  input.rs  keybind.rs  mod.rs  types.rs
karukan-im/src/core/engine/tests/: mod.rs  skk_keybind.rs
karukan-im/src/ffi/: mod.rs  tests.rs
karukan-im/src/ffi_mac/: input.rs  lifecycle.rs  mod.rs  query.rs  tests.rs
karukan-mac-app/: KarukanInputController.swift  bridging-header.h  build.sh  main.swift
karukan-mac-app/Karukan.app/Contents/: Info.plist
karukan-mac-app/Karukan.app/Contents/MacOS/: Karukan
karukan-macos/: Cargo.toml  README.md
karukan-macos/include/: karukan_macos.h
karukan-macos/scripts/: build.sh  install.sh
karukan-macos/src/: engine_bridge.rs  ffi.rs  keymap.rs  lib.rs
karukan-macos/swift/KarukanInputMethod/: Info.plist  KarukanCandidateWindow.swift  KarukanInputController.swift  SettingsView.swift  main.swift
karukan-tsf/: Cargo.toml  README.md  build.rs  karukan-tsf.def
karukan-tsf/res/: karukan.rc
karukan-tsf/src/: engine_bridge.rs  globals.rs  keymap.rs  lib.rs  registration.rs
karukan-tsf/src/candidate/: mod.rs  window.rs
karukan-tsf/src/tsf/: class_factory.rs  compartment.rs  composition_sink.rs  context_reader.rs  display_attribute.rs  edit_session.rs  key_event_sink.rs  lang_bar.rs  mod.rs  text_input_processor.rs  thread_mgr_sink.rs
tests/integration/: Dockerfile.fcitx5  run_fcitx5_test.sh  test_fcitx5_addon.sh
