[package]
name = "karukan-tsf"
version = "0.1.0"
edition.workspace = true
description = "Windows TSF (Text Services Framework) IME addon for karukan"
license.workspace = true
authors = ["togatoga"]
repository.workspace = true
homepage.workspace = true
keywords = ["japanese", "ime", "tsf", "windows", "input-method"]
categories = ["text-processing", "internationalization"]

[lib]
name = "karukan_tsf"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# Core engine (reuse karukan-im's InputMethodEngine directly)
karukan-im = { path = "../karukan-im" }
karukan-engine.workspace = true

# Windows API bindings
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_DirectWrite",
    "Win32_UI_WindowsAndMessaging",
] }

# Global state
once_cell = "1"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

[build-dependencies]
embed-resource = "3"

[dev-dependencies]
tempfile.workspace = true
